Ported alot but bugged