@@ -7,7 +7,6 @@ import me.shedaniel.rei.api.common.entry.EntryIngredient;
 import me.shedaniel.rei.api.common.util.EntryIngredients;
 import me.shedaniel.rei.api.common.util.EntryStacks;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.RecipeHolder;
 
 import java.util.List;
 
@@ -16,19 +15,19 @@ public class DnaSynthesizingRecipeDisplay extends BasicDisplay {
     private int inputCount;
     private ItemStack inputItem;
 
-    public DnaSynthesizingRecipeDisplay(RecipeHolder<DnaSynthesizingRecipe> recipe) {
+    public DnaSynthesizingRecipeDisplay(DnaSynthesizingRecipe recipe) {
         super(
             List.of(
-                EntryIngredients.ofIngredient(recipe.value().getInputItems().getFirst()),
-                EntryIngredients.ofIngredient(recipe.value().getInputItems().get(1)),
-                EntryIngredients.ofIngredient(recipe.value().getInputItems().get(2))
+                EntryIngredients.ofIngredient(recipe.getInputItems().get(0)),
+                EntryIngredients.ofIngredient(recipe.getInputItems().get(1)),
+                EntryIngredients.ofIngredient(recipe.getInputItems().get(2))
             ),
-            List.of(EntryIngredient.of(EntryStacks.of(recipe.value().getOutput().getFirst())))
+            List.of(EntryIngredient.of(EntryStacks.of(recipe.getOutput().get(0))))
         );
 
-        energy = recipe.value().getEnergy();
-        inputCount = recipe.value().getInputCount();
-        inputItem = new ItemStack(recipe.value().getInputItems().get(2).getItems()[0].getItem(), recipe.value().getInputCount());
+        energy = recipe.getEnergy();
+        inputCount = recipe.getInputCount();
+        inputItem = new ItemStack(recipe.getInputItems().get(2).getItems()[0].getItem(), recipe.getInputCount());
     }
 
     public int getEnergy() {
