@@ -7,7 +7,6 @@ import me.shedaniel.rei.api.common.entry.EntryIngredient;
 import me.shedaniel.rei.api.common.util.EntryIngredients;
 import me.shedaniel.rei.api.common.util.EntryStacks;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.RecipeHolder;
 
 import java.util.List;
 
@@ -16,13 +15,13 @@ public class MeltingRecipeDisplay extends BasicDisplay {
     private final ItemStack inputItem;
     private final int outputCount;
 
-    public MeltingRecipeDisplay(RecipeHolder<MeltingRecipe> recipe) {
-        super(List.of(EntryIngredients.ofIngredient(recipe.value().getIngredients().getFirst())),
-                List.of(EntryIngredient.of(EntryStacks.of(recipe.value().getOutputs().getFirst()))));
+    public MeltingRecipeDisplay(MeltingRecipe recipe) {
+        super(List.of(EntryIngredients.ofIngredient(recipe.getIngredients().get(0))),
+                List.of(EntryIngredient.of(EntryStacks.of(recipe.getOutputs().get(0)))));
 
-        energy = recipe.value().getEnergy();
-        inputItem = new ItemStack(recipe.value().getIngredients().getFirst().getItems()[0].getItem(), recipe.value().getInputCount());
-        outputCount = recipe.value().getOutputs().getFirst().getCount();
+        energy = recipe.getEnergy();
+        inputItem = new ItemStack(recipe.getIngredients().get(0).getItems()[0].getItem(), recipe.getInputCount());
+        outputCount = recipe.getOutputs().get(0).getCount();
     }
 
     public int getEnergy() {
